--- a/templates/default.html
+++ b/templates/default.html
@@ -3,21 +3,21 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>Paul Bédaride - $title</title>
+        <title>Paul Bédaride - $title$</title>
         <link rel="stylesheet" type="text/css" href="/css/default.css" />
         <link rel="stylesheet" type="text/css" href="/css/syntax.css" />
     </head>
     <body>
-        <h1>Paul Bédaride - $title</h1>
+        <h1>Paul Bédaride - $title$</h1>
         <div id="navigation">
 	    <a href="index.html">Home</a>
 	    <a href="teaching.html">Teaching</a>
 	    <a href="papers.html">Papers</a>
 	    <a href="projects.html">Projects</a>
-	    <a href="links.html">Links</a>
+	    <a href="links">Links</a>
             <a href="aboutme.html">AboutMe</a>
         </div>
-	$body
+	$body$
 	<div id="advertising">
 	    <a href="http://jaspervdj.be/hakyll/">
                 <img alt="Hakyll" src="/files/images/hakyll.png" />
